config/app/podzone-plone.yaml

apiVersion: v1
kind: Service
metadata:
  name: plone-service
  annotations:
spec:
  selector:
    app: plone
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plone
  labels:
    app: plone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plone
  template:
    metadata:
      labels:
        app: plone
    spec:
      volumes:
      containers:
      - name: plone
        image: plone
        ports:
        - containerPort: 8080
