config/app/podzone-adminer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-db-gui-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: podzone-ingress-class
  tls:
  - hosts:
    - db.southern.podzone.net
    secretName: db-cert
  rules:
  - host: db.southern.podzone.net
    http:
      paths:
      - backend:
         service:
           name: adminer
           port:
             number: 8080
        path: /
        pathType: Prefix
